# ghaf-givc

./: .gitignore  Cargo.toml  README.md  build.rs  devshell.nix  devshell.toml  flake.nix  go.mod  go.sum  shell.nix  treefmt.nix
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: check.yml  codeql.yml  dependency-amend-go.yml  dependency-review.yml  go-sectest.yml  scorecards.yml
api/: protoc.sh
api/admin/: admin.pb.go  admin.proto  admin_grpc.pb.go
api/ctap/: ctap.proto
api/event/: event.proto
api/exec/: exec.proto
api/hwid/: hwid.pb.go  hwid.proto  hwid_grpc.pb.go
api/locale/: locale.pb.go  locale.proto  locale_grpc.pb.go
api/notify/: notify.proto
api/policyadmin/: policyadmin.proto
api/policyagent/: policyagent.proto
api/socket/: socket.pb.go  socket.proto  socket_grpc.pb.go
api/stats/: stats.proto
api/stats_message/: stats_message.proto
api/systemd/: systemd.pb.go  systemd.proto  systemd_grpc.pb.go
api/vm/: vm.proto
api/wifi/: wifi.pb.go  wifi.proto  wifi_grpc.pb.go
client/: Cargo.toml
client/src/: client.rs  endpoint.rs  error.rs  lib.rs
common/: Cargo.toml  build.rs
common/src/: address.rs  lib.rs  query.rs  types.rs
crates/admin/: Cargo.toml
crates/admin/src/: lib.rs
crates/admin/src/admin/: OTA.rs  entry.rs  exec.rs  mod.rs  opa.rs  policy.rs  policy_server.rs  policyclient.rs  registry.rs  server.rs
crates/admin/src/policyadmin_api/: client.rs  mod.rs  policy_manager.rs  policy_repo.rs  policy_urls.rs
crates/admin/src/policyagent_api/: client.rs
crates/admin/src/systemd_api/: client.rs  mod.rs  server.rs
crates/admin/src/utils/: access_control.rs  auth.rs  authenticator.rs  grpc_interceptor.rs  json.rs  mod.rs  naming.rs  tls.rs  tonic.rs  vsock.rs  x509.rs
crates/agent/: Cargo.toml
crates/agent/src/: cli.rs  config.rs  ctap.rs  eventproxy.rs  exec.rs  hwid.rs  lib.rs  locale.rs  notifier.rs  policyadmin.rs  registration.rs  runtime.rs  service.rs  servicemanager.rs  socketproxy.rs  statsmanager.rs  wifimanager.rs
crates/agent/tests/: servicemanager.rs
crates/cachix-client/: Cargo.toml
crates/cachix-client/src/: client.rs  config.rs  error.rs  lib.rs  nixos.rs  types.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  endpoint.rs  error.rs  exec.rs  lib.rs  stream.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: address.rs  authn.rs  lib.rs  query.rs  tls_stream.rs  types.rs
crates/ota-update/: Cargo.toml
crates/ota-update/examples/: smoke_registry_roundtrip.rs
crates/ota-update/src/: bootctl.rs  cli.rs  lib.rs  lock.rs  nixos.rs  profile.rs  query.rs  types.rs
crates/ota-update/src/image/: checksum.rs  cli.rs  executor.rs  group.rs  install.rs  lvm.rs  manifest.rs  mod.rs  pipeline.rs  plan.rs  runtime.rs  slot.rs  uki.rs  version.rs
crates/ota-update/src/image/test/: data.rs  helpers.rs  mod.rs
crates/ota-update/src/registry/: cli.rs  media_type.rs  mod.rs  oras.rs  progress.rs  types.rs
crates/policyadmin/: Cargo.toml
crates/policyadmin/src/: lib.rs  policy.rs  policy_manager.rs  policy_repo.rs  policy_urls.rs
docs/superpowers/plans/: 2026-07-14-givc-agent-rust-rewrite.md
docs/superpowers/specs/: 2026-07-14-givc-agent-rust-rewrite-design.md
docs/templates/: grpc.tmpl  grpc2.tmpl
internal/cmd/givc-admin/: main.go
internal/cmd/givc-agent/: main.go
internal/cmd/givc-app/: main.go
internal/pkgs/applications/: applications.go  applications_test.go
internal/pkgs/grpc/: grpcclient.go  grpcserver.go
internal/pkgs/hwidmanager/: controller.go  transport.go
internal/pkgs/localelistener/: controller.go  transport.go
internal/pkgs/registry/: registry.go
internal/pkgs/serviceclient/: transport.go
internal/pkgs/servicemanager/: controller.go  transport.go
internal/pkgs/socketproxy/: controller.go  transport.go
internal/pkgs/systemmanager/: admin.go  internal.go  sysfsm.go  transport.go
internal/pkgs/types/: types.go
internal/pkgs/utility/: tls.go  utility.go
internal/pkgs/wifimanager/: controller.go  transport.go
modules/api/: protoc.sh
modules/api/admin/: admin.pb.go  admin_grpc.pb.go
modules/api/ctap/: ctap.pb.go  ctap_grpc.pb.go
modules/api/event/: event.pb.go  event_grpc.pb.go
modules/api/exec/: exec.pb.go  exec_grpc.pb.go
modules/api/hwid/: hwid.pb.go  hwid_grpc.pb.go
modules/api/locale/: locale.pb.go  locale_grpc.pb.go
modules/api/notify/: notify.pb.go  notify_grpc.pb.go
modules/api/policyadmin/: policyadmin.pb.go  policyadmin_grpc.pb.go
modules/api/policyagent/: policyagent.pb.go  policyagent_grpc.pb.go
modules/api/socket/: socket.pb.go  socket_grpc.pb.go
modules/api/stats/: stats.pb.go  stats_grpc.pb.go
modules/api/stats_message/: stats_message.pb.go
modules/api/systemd/: systemd.pb.go  systemd_grpc.pb.go
modules/api/vm/: vm.pb.go  vm_grpc.pb.go
modules/api/wifi/: wifi.pb.go  wifi_grpc.pb.go
modules/cmd/givc-agent/: config.go  config_test.go  event-service.go  main.go  registration.go  registration_test.go  socket-service.go  socketproxy-service.go
modules/pkgs/applications/: applications.go  applications_test.go
nixos/cachix/: default.nix
nixos/checks/: run-vm-test.nix  test-parts.nix  treefmt.nix  vmTests.nix
nixos/modules/: access-control.nix  admin-go.nix  admin.nix  appvm.nix  dbus.nix  definitions.nix  givc-agent-acl.nix  host.nix  notifier.nix  packages.nix  sysvm.nix  tls.nix  update-server.nix
nixos/tests/: admin.nix  app.nix  dbus.nix  default.nix  empty.nix  event.nix  netvm.nix  ota-update-image.nix  ota-update.nix  setup.nix  shared-configs.nix  sway.py  tls-ip-verify.nix  zathura.nix
scripts/: givc-acl-helper.sh  givc-explorer.sh  ota-oras-push.py  ota-registry-smoke.sh  update-copyright.sh  update-vendorHash.sh
src/: admin.rs  endpoint.rs  lib.rs  registry.rs  types.rs
src/admin/: client.rs  entry.rs  mod.rs  registry.rs  server.rs
src/systemd_api/: client.rs  server.rs
src/utils/: auth.rs  mod.rs  naming.rs  tonic.rs  vsock.rs  x509.rs
tools/givc-acl-helper/: go.mod
tools/givc-explorer/: go.mod  go.sum  main.go
(+114 files in other folders)
