[workspace]
members = [
  "client",
  "common",
  "."
]

[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2021"
license = "Apache 2.0"
name = "givc"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3"
async-channel = "2.3.1"
strum = {version = "0.26", features = ["derive"]}
clap = {version = "4.5.4", features = ["derive", "env"]}
console = "0.15"
prost = "0.13"
regex = "1.11"
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "macros", "fs"]}
tokio-stream = "0.1"
tokio-vsock = "0.5"
tonic = {version="0.12", features = ["tls"]}
tonic-types = {version="0.12"}
tonic-reflection = {version="0.12"}
tower = {version = "0.4"}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "tracing-log", "time", "local-time"]}
tracing-journald = {version =" 0.2.0"}
serde = { version = "1.0.202", features = ["derive"]}
serde_json = "1.0.120"
x509-parser = { version = "0.16" }

tokio-listener = { features = ["multi-listener", "tonic012", "vsock"], git = "https://github.com/avnik/tokio-listener", branch = "avnik/vsock-ghaf" }

# GIVC subparts
givc-common = { path="common" } 
givc-client = { path="client" } 
