[workspace]
members = [
  "crates/client",
  "crates/common",
  "crates/admin",
  "crates/ota-update",
  "crates/cachix-client",
  "crates/policyadmin",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
async-stream = "0.3"
axum = "0.8"
bootspec = "2.0"
bytes = "1.11.1"
cedar-policy = "4.9"
clap = "4.5.60"
futures-util = "0.3"
http = "1.4.0"
http-body-util = "0.1.3"
prost = "0.14.3"
prost-reflect = "0.16.3"
regex = "1.12"
reqwest = { version = "0.13.2", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
strum = "0.28"
thiserror = "2.0"
tokio = "1.50"
tokio-listener = "0.5.1"
tonic-middleware = "0.4"
tokio-stream = "0.1"
tokio-util = "0.7"
tokio-vsock = "0.7"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tonic-types = "0.14"
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
