[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2021"
license = "Apache 2.0"
name = "givc-client"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
async-stream = "0.3"
http = "0.2"
http-body = "0.4.2"
hyper-util = { version = "0.1.4"}
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "macros"]}
tokio-stream = "0.1"
tonic = {version="0.12.2", features = ["tls"]}
tonic-types = {version="0.12.2"}
tower = {version = "0.4"}
tracing = "0.1"
serde = { version = "1.0.202", features = ["derive"]}

givc-common = { path = "../common" }
