[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "givc"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.3.1"
async-fn-stream = "*"
async-stream = "0.3"
async-trait = "0.1.89"
bytes = "1.11.1"
cedar-policy = "4.9"
clap = { version = "4.5.60", features = ["derive", "env"] }
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
notify = "8.2.0"
once_cell = "1.21.4"
prost = "0.14.3"
prost-reflect = { version = "0.16.3", features = ["serde"] }
regex = "1.12"
serde_json = "1.0.149"
serde = { version = "1.0.202", features = ["derive"] }
tokio-stream = "0.1"
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "fs",
] }
tokio-listener = { version = "0.5.1", features = [
  "multi-listener",
  "vsock",
  "tonic014",
] }
tokio-vsock = "0.7"
tonic-middleware = "0.4"
tonic-reflection = "0.14"
tonic-types = "0.14"
tonic = { version = "0.14", features = ["tls-aws-lc"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"
x509-parser = "0.18"
lazy-regex = "3.6.0"

# GIVC subparts
givc-policyadmin = { path = "../policyadmin" }
givc-common = { path = "../common" }
givc-client = { path = "../client" }
ota-update = { path = "../ota-update" }
