[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "givc"
publish = false
version = "0.0.1"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-fn-stream = "*"
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
cedar-policy.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
notify.workspace = true
once_cell.workspace = true
prost.workspace = true
prost-reflect = { workspace = true, features = ["serde"] }
regex.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio-stream.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "time",
  "macros",
  "fs",
] }
tokio-listener = { workspace = true, features = [
  "multi-listener",
  "vsock",
  "tonic014",
] }
tokio-vsock.workspace = true
tonic-middleware.workspace = true
tonic-reflection.workspace = true
tonic-types.workspace = true
tonic = { workspace = true, features = ["tls-aws-lc"] }
tracing.workspace = true
tracing-journald.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir.workspace = true
x509-parser = "0.18"
lazy-regex = "3.6.0"

# GIVC subparts
givc-policyadmin = { path = "../policyadmin" }
givc-common = { path = "../common" }
givc-client = { path = "../client" }
ota-update = { path = "../ota-update" }
