[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "givc-agent"
publish = false
version = "0.0.1"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures-util.workspace = true
givc-client = { path = "../client" }
givc-common = { path = "../common" }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "net",
  "rt-multi-thread",
  "time",
] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["tls-aws-lc"] }
tonic-reflection.workspace = true
tracing.workspace = true
tracing-journald.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zbus = { version = "5.17.0", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.26100.0", default-features = false, features = [
  "systemd1",
  "zbus-async-tokio",
] }
url = "2.5.7"
