[package]
name = "cachix-client"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
license = "Apache 2.0"
publish = false

[dependencies]
bootspec = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "gzip",
  "default-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Optional dependency for CLI
clap = { workspace = true, features = ["derive"], optional = true }

[features]
cli = ["clap"]
nixos = ["bootspec"]

[[bin]]
name = "cachix-client"
path = "src/bin/cachix-client.rs"
required-features = ["cli"]
