[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2021"
license = "Apache 2.0"
name = "givc-client"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
async-stream = "0.3"
hyper-util = "0.1"
serde = { version = "1.0.202", features = ["derive"] }
tokio-stream = "0.1"
tokio = { version = "1.45", features = ["rt-multi-thread", "time", "macros"] }
tokio-vsock = "*"
tonic-types = "0.13"
tonic = { version = "0.13", features = ["tls-ring"] }
tower = "0.5"
tracing = "0.1"

givc-common = { path = "../common" }
