[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "givc-client"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
hyper-util = "0.1"
tokio-stream = "0.1"
tokio = { version = "1.49", features = ["rt-multi-thread", "time", "macros"] }
tokio-vsock = "*"
tonic-types = "0.14"
tonic = { version = "0.14", features = ["tls-aws-lc"] }
tower = "0.5"
tracing = "0.1"
gethostname = "1.1.0"

givc-common = { path = "../common" }
