[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "givc-client"
publish = false
version = "0.0.1"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
hyper-util = "0.1"
tokio-stream.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
tokio-vsock = "*"
tonic-types.workspace = true
tonic = { workspace = true, features = ["tls-aws-lc"] }
tower = "0.5"
tracing.workspace = true
gethostname = "1.1.0"

givc-common = { path = "../common" }
