[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "givc-common"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.100"
glib = { version = "*", optional = true, features = [] }
prost = "0.14"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tokio-vsock = "*"
tonic = { version = "0.14", features = ["tls-aws-lc"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
glib = ["dep:glib"]
