[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "givc-common"
publish = false
version = "0.0.1"

[dependencies]
anyhow.workspace = true
glib = { version = "*", optional = true, features = [] }
prost = "0.14"
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tokio-vsock = "*"
tonic = { workspace = true, features = ["tls-aws-lc"] }
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[features]
glib = ["dep:glib"]
