[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "ota-update"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.100"
axum = "*"
bootspec = "*"
clap = { version = "4.5.54", features = ["derive", "env"] }
regex = "*"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "default-tls",
] }
serde_json = "1.0.149"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "*"
tokio = { version = "1.49", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "fs",
  "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
  "time",
  "local-time",
] }

cachix-client = { path = "../cachix-client", features = ["nixos"] }
