[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2024"
license = "Apache 2.0"
name = "ota-update"
publish = false
version = "0.0.1"

[dependencies]
anyhow.workspace = true
async-trait = "*"
axum.workspace = true
bootspec.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
fs2 = "*" # For locking
regex.workspace = true
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "default-tls",
] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
shell-escape = "*"
serde_with = { version = "*", features = ["hex"] }
hex = "0.4"
memmap2 = "0.9"
sha2 = { workspace = true, features = ["asm"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "time",
  "macros",
  "fs",
  "process",
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "tracing-log",
  "time",
  "local-time",
] }
oci-client = { git = "https://github.com/oras-project/rust-oci-client", rev = "1f9a41e49158634cf590903981162fa67ffdf039" }

cachix-client = { path = "../cachix-client", features = ["nixos"] }
