[package]
authors = ["Ganga Ram Jaiswal <Ganga.Ram@tii.ae>"]
edition = "2024"
license = "Apache 2.0"
name = "givc-policyadmin"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.102"
base16ct = "1"
gix = { version = "0.84", default-features = false, features = [
  "blocking-network-client",
  "blocking-http-transport-reqwest",
  "worktree-mutation",
  "revision",
  "blob-diff",
  "sha1",
] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "gzip",
  "deflate",
] }
serde_json = "1.0.150"
serde = { version = "1.0.202", features = ["derive"] }
sha2 = "0.11"
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "fs",
] }
tracing = "0.1"
