[package]
authors = ["Ganga Ram Jaiswal <Ganga.Ram@tii.ae>"]
edition = "2024"
license = "Apache 2.0"
name = "givc-policyadmin"
publish = false
version = "0.0.1"

[dependencies]
anyhow.workspace = true
base16ct = "1"
gix = { version = "0.84", default-features = false, features = [
  "blocking-network-client",
  "blocking-http-transport-reqwest",
  "worktree-mutation",
  "revision",
  "blob-diff",
  "sha1",
] }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "gzip",
  "deflate",
] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "time",
  "macros",
  "fs",
] }
tracing.workspace = true
